Fix touchstone button alignment

--- a/ol-keycloak/oltheme/src/main/resources/theme/ol/login/resources/css/styles.css
+++ b/ol-keycloak/oltheme/src/main/resources/theme/ol/login/resources/css/styles.css
@@ -299,6 +299,7 @@ main {
 #social-touchstone-idp {
   display: inline-flex;
   justify-content: center;
+  align-items: center;
   gap: 8px;
   padding: 13px;
   font-weight: 500;
